--- a/404.md
+++ b/404.md
@@ -1,8 +1,8 @@
 ---
-title: '404/nul op rekest.'
+title: '404/nul op rekest'
 permalink: 404.html
-layout: '404'
-color: 'yellow'
+layout: 'error'
+color: '#cc0000'
 ---
 
 De server gaf een 404 error en gaf nul op rekest (null on request). De pagina die u zocht kan niet worden gevonden. Waarschijnlijk bestaat deze pagina niet meer.
